--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,9 +16,11 @@
     "bulma": "^0.9.2",
     "chokidar": "^3.5.3",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "install": "^0.13.0",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-axios-cors": "^1.0.1",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.7"
   },
