--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,9 +19,11 @@
     "cors": "^2.8.5",
     "install": "^0.13.0",
     "moment": "^2.29.1",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.11",
     "vue-axios-cors": "^1.0.1",
     "vue-router": "^3.2.0",
+    "vue-select": "^3.20.2",
     "vuelidate": "^0.7.7"
   },
   "devDependencies": {
