--- a/backend/api-gateway/src/main/resources/application.yml
+++ b/backend/api-gateway/src/main/resources/application.yml
@@ -1,10 +1,19 @@
 server:
-  port: 8080
+  port: 8081
 spring:
   application:
     name: api-gateway
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "https://www.javarubberduck.com"
+            allowedHeaders:
+              - content-type
+            allowedMethods:
+              - GET
+              - POST
       discovery:
         locator:
           enabled: true
