--- a/backend/reserve-service/src/main/resources/application.yml
+++ b/backend/reserve-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9001
+  port: 9003
   tomcat:
     max-swallow-size: 100MB
     max-http-form-post-size: 100MB
@@ -16,7 +16,7 @@ spring:
               - GET
               - POST
   application:
-    name: user-service
+    name: reserve-service
   data:
     mongodb:
       uri: mongodb+srv://fastflight:putter123456@cluster0.haxae3r.mongodb.net/test
