--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "install": "^0.13.0",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.1",
     "swiper": "^8.4.5",
     "v-calendar": "^2.4.1",
